--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,8 @@ status = "actively-developed"
 [features]
 default = ["std"]
 std = ["wasm-bindgen?/std", "js-sys?/std"]
-macro-diagnostics = ["dep:uuid-macro-internal"]
+# Deprecated; now a no-op
+macro-diagnostics = []
 
 # NOTE: When adding new features, check the `ci.yml` workflow
 # and include them where necessary (you can follow along with existing features)
@@ -160,12 +161,6 @@ default-features = false
 optional = true
 version = "1"
 
-# Public: Re-exported
-[dependencies.uuid-macro-internal]
-version = "1.19.0"
-path = "macros"
-optional = true
-
 # Private
 [dependencies.atomic]
 default-features = false
@@ -184,9 +179,6 @@ optional = true
 default-features = false
 version = "0.3"
 optional = true
-
-[dev-dependencies.bincode]
-version = "1.0"
 
 [dev-dependencies.serde]
 version = "1.0.221"
@@ -214,7 +206,6 @@ version = "1"
 
 [workspace]
 members = [
-    "macros",
     "rng",
     "examples",
     "tests/smoke-test",
