--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,18 +186,18 @@ jobs:
         uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
 
       - name: Install Rust Toolchain
-        run: rustup update nightly
+        run: rustup update nightly-2026-02-11
 
       - name: Install Miri
         run: |
-          rustup toolchain install nightly --component miri
-          cargo +nightly miri setup
+          rustup toolchain install nightly-2026-02-11 --component miri
+          cargo +nightly-2026-02-11 miri setup
 
       - name: Default features
-        run: cargo +nightly miri test --lib --all-features
+        run: cargo +nightly-2026-02-11 miri test --lib --all-features
 
       - name: BE
-        run: cargo +nightly miri test --target s390x-unknown-linux-gnu --lib --all-features
+        run: cargo +nightly-2026-02-11 miri test --target s390x-unknown-linux-gnu --lib --all-features
 
   clippy:
     name: Build / Clippy
